public/css/theme1.css
/*******************************************************************************
*	Page Style Overrides
*******************************************************************************/

.container {
	max-width: 1000px;
	min-height: 500px;
	margin-bottom: 30px;
}

/*******************************************************************************
*	Custom Control Styles and Overrides
*******************************************************************************/

.form-control, output {
    display: block;
    font-size: 18px;
    line-height: 1.6;
    color: #555
}

.form-control {
    width: 100%;
    height: 36px;
    padding: 6px 12px;
}

.control-label {
	font-size:1.3em;
	margin-top:20px;
}

.checkbox-label
{
	font-size: 1.2em;
	padding: 5px 5px 5px 0px;
	margin: 0px 0px 10px 0px;
}

.radio-label
{
	font-size: 1.2em;
	padding: 5px 5px 5px 0px;
	margin: 0px 20px 10px 0px;
	
	vertical-align: middle;
}

.form-group {
    margin-bottom: 15px;
    margin-top: 15px;
}

.clear {
	clear:both;
}

.radio-group-item {
	float:left;
}

.submit-button {
	clear:both;
}

.submit-button button {
	margin-top: 20px;
}

.glyphCol {
	width:10px;
}

.submenu-view {
	font-size: 25px;
}

.submenu-view td {
	width: 40px;
}


/*******************************************************************************
*	More Styles
*******************************************************************************/

